--- a/Audio Player/app/src/main/res/layout/activity_main.xml
+++ b/Audio Player/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playButton" />
+
+    <SeekBar
+    android:id="@+id/voulumeSlider"
+    android:layout_width="0dp"
+    android:layout_height="44dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="57dp"
+    android:layout_marginEnd="10dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/PauseButton" />
+
+    <SeekBar
+        android:id="@+id/audioPlayerSeekBar"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/voulumeSlider" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
